# family-bizzare-adventures

./: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/versions/: 2024_06_14_0022-922c9256e7df_create_all_new_way.py  2024_06_14_1154-17e7308e1911_modify_nodes.py  2024_06_14_1209-f93df52f6a04_modify_story.py  2024_06_14_1549-00ff28485e61_modify_nodes.py  2024_06_14_1616-c2e7c1a3fc49_modify_nodes_again.py
api_v1/: __init__.py
api_v1/nodes/: crud.py  schemas.py  views.py
api_v1/storys/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  mixins.py  node.py  story.py
core/neural_processing/: image_generation.py  schemas.py  text_getter.py
